8267954: Shared class should be flagged after failed to load to prevent from being loaded again